# climate_categories

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .sourcery.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tbump.toml  tox.ini  update_changelog.py  update_citation_info.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_categorization.md
.github/workflows/: ci.yml
changelog_unreleased/: 162.fix.rst  162.improvement.rst  163.improvement.rst  164.improvement.rst  166.trivial.rst  167.improvement.rst  169.improvement.rst  172.improvement.rst  174.improvement.rst  175.trivial.rst  177.improvement.rst  188.improvement.rst  193.improvement.rst  196.improvement.rst  209.improvement.rst  CRF_specs.rst  add-leaf-children.rst  aosis.rst  autochangelog.rst  conversion-complete.rst  conversions.rst  crf2013.rst  fix-limit.rst  fix_docs_building.rst  gcam-fix.rst  gcam.rst  ipcc-refactor.rst  iso3.rst  limit.rst  metadata-format.rst  more-export.rst  new-ar6-scen-db.rst  new-unfccc-di-api.rst  packaging-fixes.rst  py-typed.rst  rcmip.rst  regenerate.rst  tree_limit.rst  umbrella-title.rst  unfccc_fix.rst  (+2 more)
climate_categories/: __init__.py  _categories.py  _conversions.py  search.py
climate_categories/data/: AR6_SCEN_DB.py  AR6_SCEN_DB.yaml  BURDI.pickle  BURDI.py  BURDI.yaml  BURDI_class.pickle  BURDI_class.py  BURDI_class.yaml  CRF1999.pickle  CRF1999.py  CRF1999.yaml  CRF2013.py  CRF2013.yaml  CRF2013_2021.py  CRF2013_2021.yaml  CRF2013_2022.py  CRF2013_2022.yaml  CRF2013_2023.py  CRF2013_2023.yaml  CRF2013_2024.py  CRF2013_2024.yaml  CRFDI.pickle  CRFDI.py  CRFDI.yaml  CRFDI_class.pickle  CRFDI_class.py  CRFDI_class.yaml  CT.py  CT.yaml  FAO.py  FAO.yaml  GCB.pickle  GCB.py  GCB.yaml  IPCC1996.pickle  IPCC1996.py  IPCC1996.yaml  IPCC2006.pickle  IPCC2006.py  IPCC2006.toml  (+25 more)
climate_categories/tests/: __init__.py  conftest.py  examples.py  test_CT.py  test_climate_categories.py  test_conversions.py  test_crf.py  test_crfdi.py  test_di.py  test_fao.py  test_gas.py  test_ipcc.py  test_iso3.py  test_overcounting.py  test_primap.py  test_rcmip.py  test_search.py
climate_categories/tests/data/: bad_conversion.csv  broken_conversion_not_allowed.csv  broken_conversion_not_existing.csv  broken_hierarchical_categorization.yaml  broken_simple_categorization.yaml  example_conversion.IPCC1996.IPCC2006.csv  good_conversion.csv  good_conversion_A.yaml  good_conversion_B.yaml  good_conversion_aux1.yaml  good_conversion_aux2.yaml  good_conversion_reversed.csv  hierarchical_categorization.yaml  simple_categorisation_a.yaml  simple_categorisation_b.yaml  simple_categorization.yaml  simple_conversion.csv  simple_conversion_by_gas.csv  test_conversion_with_existing_categorizations.csv  test_conversion_with_existing_categorizations_aux_dims.csv
data_generation/: .gitignore  AR6_SCEN_DB.py  BURDI.py  BURDI_class.py  CRF1999.py  CRF2013.py  CRF2013_2021.py  CRF2013_2022.py  CRF2013_2023.py  CRF2013_2024.py  CRFDI.py  CRFDI_class.py  CT.py  FAO.py  IPCC1996.py  IPCC2006.py  IPCC2006_PRIMAP.py  ISO3.py  ISO3_GCAM.py  PRIMAP_entity.py  RCMIP.py  ar6-variables.csv  conversion.IPCC1996.IPCC2006.py  convert_yaml_to_pickle.py  convert_yaml_to_python.py  gas.py  utils.py
docs/: Makefile  api.rst  api_design.rst  conf.py  credits.rst  data.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.ipynb  usage.rst
docs/changelog_unreleased/: rcmip.rst
