[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = [
  "climate_categories/data/*.py",
  "climate_categories/tests/data/*.py"
]
extend-select = [ "W", "I", "UP", "B", "NPY", "RUF", "PD" ]
target-version = "py39"
