[metadata]
name = climate_categories
version = 0.10.1
author = Mika Pflüger
author_email = mika.pflueger@climate-resource.com
description = Commonly used codes, categories, terminologies, and nomenclatures used in climate policy analysis as a Python package.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/pik-primap/climate_categories
project_urls =
    Documentation = https://climate-categories.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = Apache Software License 2.0
license_files = LICENSE

[options]
packages =
    climate_categories
    climate_categories.data
    climate_categories.tests
    climate_categories.tests.data
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    networkx
    pandas
    strictyaml
    natsort
    ruamel.yaml
    pyparsing
    immutables
    black

[options.extras_require]
test =
    pytest
    pytest-cov
    xdoctest
dev =
    pip
    tbump
    wheel
    build
    ruff
    coverage
    Sphinx
    twine
    pytest
    pre-commit
    sphinx_rtd_theme
    ipykernel
    nbsphinx
    networkx
    xdoctest
    tox
    unfccc_di_api >= 3.0.1
    openscm-units
    pycountry
    lxml
    tqdm
    pypdf-table-extraction
    numpy < 2

[options.package_data]
* =
    *.yaml
    *.csv
    py.typed

[doc8]
max-line-length = 88
ignore-path-errors = docs/data.rst;D001
